<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="6dp"
    tools:context=".main.MainActivity">

    <LinearLayout
        android:id="@+id/layout_controls"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="40"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/player1lose"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="50"
                    android:rotation="180"
                    android:text="@string/lose_b"/>

                <Button
                    android:id="@+id/player1draw"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="50"
                    android:rotation="180"
                    android:text="@string/draw_b" />

            </LinearLayout>

            <!--<Button
                android:id="@+id/player1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="90"
                android:rotation="180"
                android:text="@string/white_player" />-->
            <rtrk.pnrs.clockbutton.AnalogClockView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="90"
                android:rotation="180"
                android:id="@+id/player1buttonClock"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/setup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="333"
                android:text="@string/setup" />

            <Button
                android:id="@+id/start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="333"
                android:text="@string/start" />

            <Button
                android:id="@+id/statistics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="333"
                android:text="@string/statistics" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="40"
            android:orientation="vertical">

            <!--<Button
                android:id="@+id/player2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="90"
                android:text="@string/black_player" />-->
            <rtrk.pnrs.clockbutton.AnalogClockView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="90"
                android:id="@+id/player2buttonClock"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/player2lose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:text="@string/lose_b" />

                <Button
                    android:id="@+id/player2draw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:text="@string/draw_b" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_draw_lose_win"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <TextView
            android:freezesText="true"
            android:rotation="180"
            android:id="@+id/player1text"
            android:layout_width="match_parent"
            android:layout_weight="50"
            android:textSize="70dp"
            android:gravity="center"
            android:layout_height="wrap_content" />

        <TextView
            android:freezesText="true"
            android:id="@+id/player2text"
            android:layout_width="match_parent"
            android:layout_weight="50"
            android:textSize="70dp"
            android:gravity="center"
            android:layout_height="wrap_content" />
    </LinearLayout>
</RelativeLayout>
